--- a/index.html
+++ b/index.html
@@ -47,15 +47,14 @@
         .fa-github {  
         background: #02070c;  
         color: white;  
-        }  
-
+        } 
 	</style>
 </head>
 <body>
     
     <img src="maunak1.png" border="0" class="responsive-image" alt="maunak">
 	<a href="mailto:maunakdass@gmail.com"><div id="M"></div></a>
-	<h1> the site is under construction :)</h1>
+	<h1 style="color:white;"> the site is under construction :)</h1>
     <ul>  
         <li>   
         <a href="https://www.linkedin.com/in/maunak/" target="_blank" class="fa fa-linkedin"> </a>   
