--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
     <div style="position: relative; text-align: center;">
         <a href="mailto:maunakdass@gmail.com"><div id="M"></div></a>
     </div>
-    <h1 class="construction-message">The site is under construction :)</h1>
     
     <ul class="social-icons">  
         <li>   
@@ -84,6 +83,8 @@
             <a href="https://github.com/maunak" target="_blank" class="fa fa-github"></a>  
         </li>  
     </ul>
-    
+    <footer>
+  <p>under construction still..till then i hope you are having a better day than i am. <br>
+</footer>
 </body>
 </html>
